cli/tests/testdata/test/fail.out
Check [WILDCARD]/test/fail.ts
running 10 tests from ./test/fail.ts
test 0 ... FAILED ([WILDCARD])
test 1 ... FAILED ([WILDCARD])
test 2 ... FAILED ([WILDCARD])
test 3 ... FAILED ([WILDCARD])
test 4 ... FAILED ([WILDCARD])
test 5 ... FAILED ([WILDCARD])
test 6 ... FAILED ([WILDCARD])
test 7 ... FAILED ([WILDCARD])
test 8 ... FAILED ([WILDCARD])
test 9 ... FAILED ([WILDCARD])

failures:

./test/fail.ts > test 0
Error
  throw new Error();
        ^
    at [WILDCARD]/test/fail.ts:2:9

./test/fail.ts > test 1
Error
  throw new Error();
        ^
    at [WILDCARD]/test/fail.ts:5:9

./test/fail.ts > test 2
Error
  throw new Error();
        ^
    at [WILDCARD]/test/fail.ts:8:9

./test/fail.ts > test 3
Error
  throw new Error();
        ^
    at [WILDCARD]/test/fail.ts:11:9

./test/fail.ts > test 4
Error
  throw new Error();
        ^
    at [WILDCARD]/test/fail.ts:14:9

./test/fail.ts > test 5
Error
  throw new Error();
        ^
    at [WILDCARD]/test/fail.ts:17:9

./test/fail.ts > test 6
Error
  throw new Error();
        ^
    at [WILDCARD]/test/fail.ts:20:9

./test/fail.ts > test 7
Error
  throw new Error();
        ^
    at [WILDCARD]/test/fail.ts:23:9

./test/fail.ts > test 8
Error
  throw new Error();
        ^
    at [WILDCARD]/test/fail.ts:26:9

./test/fail.ts > test 9
Error
  throw new Error();
        ^
    at [WILDCARD]/test/fail.ts:29:9

failures:

	./test/fail.ts
	test 0
	test 1
	test 2
	test 3
	test 4
	test 5
	test 6
	test 7
	test 8
	test 9

test result: FAILED. 0 passed; 10 failed; 0 ignored; 0 measured; 0 filtered out ([WILDCARD])

error: Test failed
